2015-02-05  Jan Hubicka <hubicka@ucw.cz>

	* ipa-cp.c (ipa_value_from_jfunc, ipa_context_from_jfunc): Add bounds
	check.

2015-02-05  Joern Rennecke  <joern.rennecke@embecosm.com>

	* config/h8300/constraints.md ("U" constraint): Use strict
	variant of REG_OK_FOR_BASE_P after reload has started.

2015-02-04  Mantas Mikaitis  <mantas.mikaitis@arm.com>

	* config/arm/arm.h (TARGET_NEON_FP): Removed conditional definition,
	define to zero if !TARGET_NEON.
	(TARGET_CPU_CPP_BUILTINS): Added second condition before defining
	__ARM_FP macro.

2015-02-04  Jan Hubicka  <hubicka@ucw.cz>
	    Trevor Saunders  <tsaunders@mozilla.com>

	PR ipa/61548
	* tree-emultls.c (new_emutls_decl): Resolve alias after creating it.

2015-02-04  Jan Hubicka  <hubicka@ucw.cz>

	PR ipa/61548
	* ipa.c (symbol_table::remove_unreachable_nodes): Fix ordering issue
	when removing varpool nodes.

2015-02-04  Jan Hubicka  <hubicka@ucw.cz>

	PR ipa/61548
	* varpool.c (varpool_node::remove): Fix order of variables.

2015-02-04  Jan Hubicka  <hubicka@ucw.cz>

	PR ipa/64686
	* ipa-inline.c (inline_small_functions): Fix ordering issue between
	speculation resolution and key updates.

2015-02-04  Jan Hubicka  <hubicka@ucw.cz>

	* ipa-prop.c (update_indirect_edges_after_inlining): By more careful
	about not letting any speculative edges unupdated.

2015-02-04  Jan Hubicka  <hubicka@ucw.cz>

	PR gcov/64123
	* gcov-io.c (gcov_var): Export.

2015-02-04  Jan Hubicka  <hubicka@ucw.cz>

	PR middle-end/64922
	* ipa-prop.c (update_indirect_edges_after_inlining): Correctly update
	edges that become speculative.

2015-02-04  Jakub Jelinek  <jakub@redhat.com>

	* dwarf2out.c (is_fortran): Also return true for DW_LANG_Fortran03
	or DW_LANG_Fortran08.
	(lower_bound_default): Return 1 for DW_LANG_Fortran03 or
	DW_LANG_Fortran08.
	(gen_compile_unit_die): Handle "GNU Fortran2003" and
	"GNU Fortran2008" language strings.
	* dbxout.c (get_lang_number): Use lang_GNU_Fortran.
	* langhooks.h (lang_GNU_Fortran): New prototype.